fixed right side gap error in all pages

--- a/contact.css
+++ b/contact.css
@@ -217,10 +217,10 @@ li {
     .resp-nav-menu {
         position: fixed;
         left: -100%;
-        top: 60px;
+        top: 0px;
         gap: 16px;
         flex-direction: column;
-        justify-content: flex-start;
+        justify-content: center;
         align-items: center;
         background-color: black;
         background: hsla(0, 100%, 1%, 0.589);
